--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -27,7 +27,7 @@ the most abundant taxa along with several options.
 
 Next, a few demonstrations are shown using the [@Lahti2014]
 dataset. A jitter plot based on relative abundance data, similar to
-the one presented at [@Salosensaari2021] (Supplementary fig.1), can
+the one presented at [@Salosensaari2021] (Supplementary Fig.1), can
 be visualized as follows:
 
 ```{r, warning=FALSE, message=FALSE}
