--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -305,7 +305,7 @@ Let us summarize some commonly used transformations in microbiome data
 science; further details and benchmarkings available in the
 references.
 
- * 'relabundance' relative transformation, also known as total sum
+ * 'relabundance' Relative transformation, also known as total sum
    scaling (TSS) and compositional transformation. This converts
    counts into percentages (at the scale [0, 1]) that sum up to
    1. Much of the currently available taxonomic abundance data from
@@ -329,14 +329,14 @@ references.
    regular clr (see above) but allows data with zeroes and avoids the
    need to add pseudocount [@Keshavan2010, @Martino2019].
 
-  * 'pa' presence/absence transformation ignores abundances and only
+  * 'pa' Presence/Absence transformation ignores abundances and only
    indicates whether the given feature is detected above the given
    threshold (default: 0). This simple transformation is relatively
    widely used in ecological research. It has shown good performance
    in microbiome-based classification performance [@Giliberti2022,
    Karwowska2024].
 
- * 'Standardize' Standardize transformation scales data to zero mean and 
+ * 'standardize' Standardize transformation scales data to zero mean and 
    unit variance. This is used to bring features (or samples) to more 
    comparable levels in terms of mean and scale of the values. This can enhance
    visualization and interpretation of the data
