updated to new function name

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -758,10 +758,10 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 ### Transforming a TreeSummarizedExperiment into a dataframe
 
-Transforming a TreeSE object into a dataframe is straightforward with the MIA package. The `meltAssay` function is particularly handy for this purpose. It allows you to melt various parts of a TreeSE object into a dataframe based on the parameters you specify.
+Transforming a TreeSE object into a dataframe is straightforward with the MIA package. The `meltSE` function is particularly handy for this purpose. It allows you to melt various parts of a TreeSE object into a dataframe based on the parameters you specify.
 
 ```{r}
-molten_tse <- mia::meltAssay(tse,
+molten_tse <- meltSE(tse,
                         add_row_data = TRUE,
                         add_col_data = TRUE,
                         assay.type = "counts")
