--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -12,7 +12,7 @@ essential for data analysis and model building.
 
 The dataset should not suffer from severe technical biases, and you
 should at least be aware of potential challenges, such as outliers,
-biases, unexpected patterns and so forth. Standard summaries and
+biases, unexpected patterns, and so forth. Standard summaries and
 visualizations can help, and the rest comes with experience. Moreover, exploration and quality control often entail iterative processes.
 
 ```{r, message=FALSE}
@@ -25,9 +25,9 @@ Abundance visualization is an important data exploration
 approach. `miaViz` integrated the `plotAbundanceDensity` function to plot
 the most abundant taxa along with several options.
 
-Next, a few demonstrations are shown, using the [@Lahti2014]
-dataset. A Jitter plot based on relative abundance data, similar to
-the one presented at [@Salosensaari2021] supplementary figure 1, can
+Next, a few demonstrations are shown using the [@Lahti2014]
+dataset. A jitter plot based on relative abundance data, similar to
+the one presented at [@Salosensaari2021] (Supplementary Fig.1), can
 be visualized as follows:
 
 ```{r, warning=FALSE, message=FALSE}
@@ -52,7 +52,7 @@ plotAbundanceDensity(tse, layout = "jitter",
 ```
 
 The relative abundance values for the top-5 taxonomic features can be
-visualized as a density plot over a log scaled axis, with
+visualized as a density plot over a log-scaled axis, with
 "nationality" indicated by colors:
 
 ```{r, warning=FALSE, message=FALSE}
@@ -66,7 +66,7 @@ plotAbundanceDensity(tse, layout = "density",
 ## Prevalence
 
 Prevalence quantifies the frequency of samples where certain microbes
-were detected (above a given detection threshold). The prevalence can
+were detected (above a given detection threshold). Prevalence can
 be given as sample size (N) or percentage (unit interval).
 
 Investigating prevalence allows you either to focus on changes which
@@ -74,7 +74,7 @@ pertain to the majority of the samples, or identify rare microbes,
 which may be _conditionally abundant_ in a small number of samples.
 
 The population prevalence (frequency) at a 1% relative abundance
-threshold (`detection = 1/100` and `as_relative = TRUE`), can look
+threshold (`detection = 1/100` and `as_relative = TRUE`) can look
 like this. 
 
 ```{r exploration-prevalence}
@@ -85,7 +85,7 @@ head(getPrevalence(tse, detection = 1/100,
 The function arguments `detection` and `as_relative` can also be used
 to access how many samples pass a threshold for raw counts. Here,
 the population prevalence (frequency) at the absolute abundance
-threshold (`as_relative = FALSE`) at read count 1 (`detection = 1`) is
+threshold (`as_relative = FALSE`) with a read count of 1 (`detection = 1`) is
 accessed.
 
 ```{r concepts_prevalence2}
@@ -94,7 +94,7 @@ head(getPrevalence(tse, detection = 1, sort = TRUE,
                    as_relative = FALSE))
 ```
 
-If the output should be used for subsetting or storing the data in the
+If the output is to be used for subsetting or storing the data in the
 `rowData`, set `sort = FALSE`.
 
 ### Prevalence analysis
@@ -102,7 +102,7 @@ If the output should be used for subsetting or storing the data in the
 To investigate microbiome prevalence at a selected taxonomic level, two 
 approaches are available.
 
-First the data can be agglomerated to the taxonomic level and then `getPrevalence` 
+First, the data can be agglomerated to the taxonomic level and then `getPrevalence` 
 can be applied to the resulting object.
 
 ```{r}
@@ -116,7 +116,7 @@ head(getPrevalence(altExp(tse,"Phylum"), detection = 1/100,
                    as_relative = TRUE))
 ```
 
-Alternatively, the `rank` argument could be set to perform the
+Alternatively, the `rank` argument can be set to perform the
 agglomeration on the fly.
 
 ```{r}
@@ -140,23 +140,23 @@ prev <- getPrevalent(tse, detection = 0, prevalence = 50/100,
 prev
 ```
 
-Note that the `detection` and `prevalence` thresholds are not the same, since
+Note that the `detection` and `prevalence` thresholds are not the same, as
 `detection` can be applied to relative counts or absolute counts depending on 
 whether `as_relative` is set `TRUE` or `FALSE`
 
-The function ‘getPrevalentAbundance’ can be used to check the total
+The function `getPrevalentAbundance` can be used to check the total
 relative abundance of the prevalent taxa (between 0 and 1).
 
 ### Rare taxa
 
 Related functions are available for the analysis of rare taxa
-(`rareMembers`; `rareAbundance`; `lowAbundance`, `getRare`,
+(`rareMembers`, `rareAbundance`, `lowAbundance`, `getRare`,
 `subsetByRare`).
 
 ### Plotting prevalence
 
 To plot the prevalence, add the prevalence of each taxon to
-`rowData`. Here, we are analysing the Phylum level abundances, which
+`rowData`. Here, we are analyzing the Phylum-level abundances, which
 are stored in the `altExp` slot.
 
 ```{r}
@@ -202,7 +202,7 @@ x <- unsplitByRanks(tse, ranks = taxonomyRanks(tse)[1:6])
 x <- addHierarchyTree(x)
 ```
  
-After some preparation, the data is assembled and can be plotted with
+After some preparation, the data are assembled and can be plotted with
 `plotRowTree`.
 
 ```{r plot-prev-prev, message=FALSE, fig.cap="Prevalence of top phyla as judged by prevalence"}
@@ -234,7 +234,7 @@ tse <- GlobalPatterns
 
 ### Top taxa  
 
-The `getTop` identifies top taxa in the data.   
+The function `getTop` identifies top taxa in the data.   
 
 ```{r top-feature-taxo}
 # Pick the top taxa
@@ -246,8 +246,8 @@ rowData(tse)[top_features, taxonomyRanks(tse)][1:5, 1:3]
 
 ### Library size / read count  
 
-The total counts/sample can be calculated using `perCellQCMetrics`/`addPerCellQC` from the `scater` package. The former one
-just calculates the values, whereas the latter one directly adds them to
+The total counts per sample can be calculated using `perCellQCMetrics`/`addPerCellQC` from the `scater` package. The former one
+just calculates the values, whereas the latter directly adds them to
 `colData`.
 
 ```{r lib-size}
@@ -258,7 +258,7 @@ colData(tse)[1:5,1:3]
 ```
 
 The distribution of calculated library sizes can be visualized as a
-histogram (left), or by sorting the samples by library size (right).
+histogram (left) or by sorting the samples by library size (right).
 
 ```{r plot-viz-lib-size-1, fig.width=8, fig.height=4, fig.cap="Library size distribution."}
 library(ggplot2)
@@ -299,7 +299,7 @@ library(patchwork)
 p1 + p2
 ```
 
-Library sizes other variables from `colData` can be visualized by using a specified function called `plotColData`.
+Library sizes and other variables from `colData` can be visualized using a specified function called `plotColData`.
 
 ```{r plot-viz-lib-size-2, fig.width=8, fig.height=4, fig.cap="Library sizes per sample."}
 # Sort samples by read count, 
@@ -332,12 +332,12 @@ abundant microorganisms (see [@mcmurdie2014waste]).
 ### Contaminant sequences
 
 Samples might be contaminated with exogenous sequences. The impact of
-each contaminant can be estimated based on their frequencies and
+each contaminant can be estimated based on its frequencies and
 concentrations across the samples.
 
 The following 
 [decontam functions](https://microbiome.github.io/mia/reference/isContaminant.html)
-are based on the [@davis2018simple] and support such functionality:
+are based on [@davis2018simple] and support such functionality:
 
 * `isContaminant`, `isNotContaminant`  
 * `addContaminantQC`, `addNotContaminantQC`  
