--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -336,10 +336,11 @@ references.
    in microbiome-based classification performance [@Giliberti2022,
    Karwowska2024].
 
- * 'standardize' standardize transformation scales data to zero mean 
-   and unit variance; this is used to bring features (or samples) to 
-   more comparable levels in terms of mean and scale of the values. 
-   This can enhance visualization and interpretation of the data
+ * 'standardize' standardize transformation also known as Z-transformation
+   scales data to zero mean and unit variance; this is used to bring 
+   features (or samples) to more comparable levels in terms of mean 
+   and scale of the values. This can enhance visualization and 
+   interpretation of the data
 
 * 'log', 'log2', 'log10' Logarithmic transformations; used e.g. to
    reduce data skewness; with compositional data, the `clr` (or `rclr`)
