--- a/inst/pages/add-comm-typing.Rmd
+++ b/inst/pages/add-comm-typing.Rmd
@@ -176,7 +176,7 @@ tse <- transformAssay(tse, MARGIN = "features", assay.type = "clr", method = "st
 Countries <- data.frame("Country" = colData(tse)$Country)
 rownames(Countries) <- colData(tse)$Sample_ID
 # count matrix for pheatmap
-mat <- assays(tse)$standardize
+mat <- assays(tse, "standardize")
 
 # Order community types
 mat <- mat[, order(Countries$Country)]
@@ -348,7 +348,7 @@ tse2 <- transformAssay(tse2, MARGIN = "features", assay.type = "clr", method = "
 # get top taxa
 tse2 <- tse2[is.element(rownames(tse2), rel_taxa), ]
 
-mat <- assays(tse2)$standardize
+mat <- assays(tse2, "standardize")
 
 # Order CSTs
 mat <- mat[, order(clust)]
@@ -502,7 +502,7 @@ bray_dmm_plot
 Visualise dmm clusters in a heatmap.
 
 ```{r}
-# get clr + standardize-transformed counts
+# CLR and standardize transforms
 tse_dmn <- transformAssay(tse_dmn, MARGIN = "samples",
                            assay.type = "counts", method = "clr",
 			   pseudocount = 1)
@@ -514,7 +514,7 @@ names(clust) <- colnames(tse_dmn)
 # get top taxa
 tse_dmn <- tse_dmn[is.element(rownames(tse_dmn), rel_taxa), ]
 # get just counts
-mat <- assays(tse_dmn)$standardize
+mat <- assays(tse_dmn, "standardize")
 # order according to dmm component
 mat <- mat[, order(clust)]
 colnames(mat) <- names(sort(clust))
