--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -1163,7 +1163,9 @@ To make the exercise more engaging, let's do an exploratory data analysis task:
 i. Perform clustering on the ordination results (e.g., k-means clustering).
 ii. Visualize the clusters on the ordination plots.
 
-```{r}
+```{r, eval = FALSE}
+library(scater)
+
 # Setting seed for reproducibility
 set.seed(123)
 
@@ -1188,7 +1190,7 @@ PCoA object).
 
 * Annotate the heatmap with additional metadata (e.g., subject groups or sample types).
 
-```{r}
+```{r, eval = FALSE}
 # Load necessary libraries
 library(SummarizedExperiment)
 library(pheatmap)
