--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -180,7 +180,7 @@ When total abundances of certain phyla are of relevance, the data is initially a
 
 ```{r}
 # Agglomerate by phylum
-tse_phylum <- tse %>% mergeFeaturesByRank(rank = "Phylum")
+tse_phylum <- tse %>% agglomerateByRank(rank = "Phylum")
 
 # Subset by feature and remove NAs
 tse_phylum_subset_by_feature <- tse_phylum[
@@ -200,7 +200,7 @@ Alternatively:
 
 ```{r}
 # Store features of interest into phyla
-phyla <- c("Phylum:Actinobacteria", "Phylum:Chlamydiae")
+phyla <- c("Actinobacteria", "Chlamydiae")
 # subset by feature
 tse_phylum_subset_by_feature <- tse_phylum[phyla, ]
 # Show dimensions
@@ -250,7 +250,7 @@ remove those instances.
 
 ```{r}
 # Agglomerate data at Genus level 
-tse_genus <- mergeFeaturesByRank(tse, rank = "Genus")
+tse_genus <- aggomerateByRank(tse, rank = "Genus", na.rm = FALSE)
 # List bacteria that we want to include
 genera <- c("Class:Thermoprotei", 
             "Genus:Sulfolobus", 
