--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -250,7 +250,7 @@ remove those instances.
 
 ```{r}
 # Agglomerate data at Genus level 
-tse_genus <- aggomerateByRank(tse, rank = "Genus", na.rm = FALSE)
+tse_genus <- agglomerateByRank(tse, rank = "Genus", na.rm = FALSE)
 # List bacteria that we want to include
 genera <- c("Class:Thermoprotei", 
             "Genus:Sulfolobus", 
