Worflow translate in french and dutch

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -115,7 +115,7 @@ colData(tse)
 
 To illustrate, ***X.SampleID*** gives the sample identifier, ***SampleType*** indicates the sample type (e.g. soil, fecal matter, control) and ***Description*** provides an additional description of the sample.
 
-### rowData
+### rowData {#sec-rowData}
 
 `rowData` contains data on the features of the analyzed samples. Of particular
 interest to the microbiome field, this is used to store taxonomic information.
