--- a/inst/pages/Introductory-workflow.qmd
+++ b/inst/pages/Introductory-workflow.qmd
@@ -1,8 +1,13 @@
-# Introductory
+## Introductory
 
 <div id="workflow">
 
-<img src="images/logo.svg" alt="logo workflow" id="banner"/>
+<div id="translate">
+  <a href="Introductory-workflow-french-version.qmd"><img src="images/profile-pics/France_flag.png" alt="French flag" class="profilepic"/> **French** </a>
+  <a href="Introductory-workflow-dutch-version.qmd"><img src="images/profile-pics/Netherland_flag.jpg" alt="Netherland flag" class="profilepic"/> **Dutch** </a>
+</div>
+
+<img src="images/intro_workflow_logo.svg" alt="logo workflow" id="banner"/>
 
 # Introduction
 
@@ -10,17 +15,41 @@ Hello and welcome to a complete workflow using the latest R/Bioconductor tools f
 
 # Importing data
 
-When using microbiome packages, there are many different ways to import your data. Let's first load the mia package:
+When using microbiome packages, there are many different ways to import your data. Let's first load the required package:
 
-```{r}
-#| output: false
-library(mia)
-```
+```{r setup}
+#| output: FALSE
+# List of packages that we need
+packages <- c(
+    "ggplot2", "knitr", "mia", "dplyr", "miaViz", "vegan", "DT",
+    "scater", "patchwork", "sechm", "plotly"
+    )
 
-```{r}
-#| echo: false 
-#| output: false
-library(DT)
+# Get packages that are already installed installed
+packages_already_installed <- packages[ packages %in% installed.packages() ]
+
+# Get packages that need to be installed
+packages_need_to_install <- setdiff( packages, packages_already_installed )
+
+# Loads BiocManager into the session. Install it if it not already installed.
+if( !require("BiocManager") ){
+    install.packages("BiocManager")
+    library("BiocManager")
+}
+
+# If there are packages that need to be installed, installs them with BiocManager
+# Updates old packages.
+if( length(packages_need_to_install) > 0 ) {
+   install(packages_need_to_install, ask = FALSE)
+}
+
+# Load all packages into session. Stop if there are packages that were not
+# successfully loaded
+pkgs_not_loaded <- !sapply(packages, require, character.only = TRUE)
+pkgs_not_loaded <- names(pkgs_not_loaded)[ pkgs_not_loaded ]
+if( length(pkgs_not_loaded) > 0 ){
+    stop("Error in loading the following packages into the session: '", paste0(pkgs_not_loaded, collapse = "', '"), "'")
+}
 ```
 
 You can either choose to use your own data or one of the built-in datasets provided by mia which you may find here @sec-example-data:
@@ -28,11 +57,12 @@ You can either choose to use your own data or one of the built-in datasets provi
 In this tutorial, we'll be using the @Tengeler2020 dataset. This dataset was made by A.C. Tengeler to try to demonstrate the impact of altered microbiomes on the brain structure. Here's how we can load the data into our R environment:
 
 ```{r}
+#| label: loadDataset
 data("Tengeler2020", package="mia")
 tse <- Tengeler2020
 ```
 
-There are of course other ways to import your data using the [**mia package**](https://microbiome.github.io/mia/). These include: using either **your own data** @sec-import-from-file or by converting an existing object to a *TreeSummarizedExperiment* object as stated in @sec-conversions-between-data-formats-in-r.
+There are of course other ways to import your data using the [**mia package**](https://microbiome.github.io/mia/). These include: using either **your own data** [@sec-import-from-file] or by converting an existing object to a *TreeSummarizedExperiment* object as stated in **this section** [@sec-conversions-between-data-formats-in-r].
 
 <hr>
 
@@ -40,49 +70,36 @@ There are of course other ways to import your data using the [**mia package**](h
 
 *TreeSummarizedExperiment* or TreeSE object is the type of object used within the [**mia package**](https://microbiome.github.io/mia/) to store your data. It's a versatile and multi-purpose data type that allows for an efficient way to store and access data.
 
-## Assays
+Here's a quick reminder on how to access certain types of data:
 
-An assay is a way of measuring the presence and abundance of different types of microbes in a sample. If you want to know how many bacteria of a certain type are in your gut, you can use an assay to measure this. In this example, we subset the assay using brackets to show only the first 5 rows and the first ten columns. This makes it easier to understand and read. We'll discuss more on subsetting later.
+You can access **assays** [@sec-assay-slot] as such:
 
 ```{r}
+#| label: showAssay
 assay(tse)[1:5,1:10] 
 ```
 
-## colData
-
-Another important aspect of microbiome analysis is sample data.
+Whereas **colData** [@sec-add-or-modify-data] is accessible through:
 
 ```{r}
+#| label: showColdata
+# Transform the colData to a dataframe
 tse_df_colData <- as.data.frame(colData(tse))
+
+# Show as an interactive table
 datatable(tse_df_colData,options = list(pageLength = 5),rownames = FALSE)
 ```
 
-In this example, `colData(tse)` returns a DataFrame with 26 rows and 7 columns. Each row represents a sample, while each column represents a different aspect of the sample data.
-
-## rowData
-
-rowData contains data on sample characteristics, particularly taxonomic information.
+*rowData** [@sec-rowData] contains data on sample characteristics, particularly taxonomic information.
 
 ```{r}
-#| echo: false 
-#| output: false
-options(warn = -1)
-```
-
-```{r}
+#| warning: FALSE
+#| label: showRowdata
 tse_df_rowData <- as.data.frame(rowData(tse))
 datatable(tse_df_rowData, options = list(pageLength = 5))
 ```
 
-```{r}
-#| echo: false 
-#| output: false
-options(warn = 0)
-```
-
 Here `rowData(tse)` returns a DataFrame with 151 rows and 7 columns. Each row represents an organism and each column a taxonomic level.
-
-In the example, ***Kingdom*** indicates whether the feature belongs to the kingdom of bacteria or archaea, ***Phylum*** indicates the phylum to which the individual belongs and so on down to the specific species.
 
 To illustrate the structure of a *TreeSummarizedExperiment*, here's an article of @Huang2021 that uses this type of object. Also, please take a look at figure 1 below.
 
@@ -101,6 +118,7 @@ In some cases, you may only need to use part of your original *TreeSummarizedExp
 Using the Tengeler2020 dataset, we can focus on a certain cohort for example. Doing this is pretty straightforward:
 
 ```{r}
+#| label: subsetBySample
 tse_subset_by_sample <- tse[ , tse$cohort =="Cohort_1"]
 ```
 
@@ -133,10 +151,10 @@ Community diversity in microbiology is measured by several indices:
 The **coefficient of @Hill** combines these measures into a single equation. All these variations are referred to as alpha diversity.
 
 ```{r}
-tse_alpha <- Tengeler2020
+#| label: calculateRichness
 
 # Estimate (observed) richness
-tse_alpha <- mia::estimateRichness(tse_alpha, 
+tse_alpha <- estimateRichness(tse, 
                              assay.type = "counts", 
                              index = "observed", 
                              name="observed")
@@ -148,11 +166,7 @@ head(tse_alpha$observed)
 The result is showing the estimated richness values for different samples or locations within the dataset. It gives an idea of how diverse each sample is in terms of the number of different species present. We can then create a graph to visualize this.
 
 ```{r}
-#| output: false
-library(scater)
-```
-
-```{r}
+#| label: plotColdata
 plotColData(tse_alpha, 
             "observed", 
             "cohort", 
@@ -161,7 +175,7 @@ plotColData(tse_alpha,
   labs(y=expression(Richness[Observed]))
 ```
 
-To go even further, we can also compare the estimated Shannon index to the observed richness . Shannon quantifies the diversity in terms of both the number of different species (richness) and the evenness of their distribution (abundance) and is calculated as such:
+To go even further, we can also compare the estimated Shannon index to the observed richness. Shannon quantifies the diversity in terms of both the number of different species (richness) and the evenness of their distribution (abundance) and is calculated as such:
 
 $$
 H' = -\sum_{i=1}^{R} p_i \ln(p_i)
@@ -172,7 +186,8 @@ $$ p~i~ being the proportion of a certain microorganism.
 First, we can easily calculate this measure and add them to our TreeSE.
 
 ```{r}
-tse_alpha <- mia::estimateDiversity(tse_alpha, 
+#| label: calculateDiversity
+tse_alpha <- estimateDiversity(tse_alpha, 
                               assay.type = "counts",
                               index = c("shannon"), 
                               name = c("shannon"))
@@ -181,7 +196,7 @@ tse_alpha <- mia::estimateDiversity(tse_alpha,
 We can also compare the two measures of diversity by producing the following graphs.
 
 ```{r}
-library(patchwork)
+#| label: violinPlots
 
 # Create the plots
 plots <- lapply(c("observed", "shannon"),
@@ -202,7 +217,7 @@ plots <- lapply(plots, "+",
 
 ```
 
-It's very important to make all these comparisons in order to quantify diversity and compare samples in our data using different measures. - You can find other types of comparisons directly in the book @sec-community-diversity.
+It's very important to make all these comparisons in order to quantify diversity and compare samples in our data using different measures. - You can find other types of comparisons directly in the book [@sec-community-diversity].
 
 <hr>
 
@@ -212,18 +227,34 @@ Community similarity refers to the way microorganisms resemble each other in ter
 
 $$
 BC_{ij} = \frac{\sum_{k} |A_{k} - B_{k}|}{\sum_{k} (A_{k} + B_{k})}
-$$ Luckily for us, the [**mia package**](https://microbiome.github.io/mia/) provides an easy way to calculate the Bray-Curtis dissimilarity and add it to our TreeSE using the `transformAssay` method:
+$$ Luckily for us, the [**mia package**](https://microbiome.github.io/mia/) provides an easy way to calculate the relative Abundance to our TreeSE using the `transformAssay` method.
 
 ```{r}
+#| label: calculateRelabundance
 tse <- transformAssay(tse,
                       assay.type = "counts",
                       method = "relabundance")
 ```
-
-This will take the original counts assay and apply the Bray-Curtis formula to it. The result is a matrix with the sample identifiers as rows and the dissimilarity to other samples as columns. It can be accessed in the assays of the tse:
+This will take the original counts assay and apply the calculate the relative abundances. The result is a matrix with the sample identifiers as rows and the relative abundances for each taxon within those samples as columns. It can be accessed in the assays of the tse:
 
 ```{r}
+#| label: showRelabundance
 assay(tse, "relabundance")[5:10,1:10]
+```
+
+
+Then we can add the Bray-Curtis dissimilarity :
+
+```{r}
+#| label: calculateBrayCurtis
+#| output: false
+
+# Run PCoA on relabundance assay with Bray-Curtis distances
+tse <- runMDS(tse,
+              FUN = vegdist,
+              method = "bray",
+              assay.type = "relabundance",
+              name = "MDS_bray")
 ```
 
 In our case, the assay contains 151 rows and 27 columns. Having so many columns and thus dimensions can be troublesome for visualizing dissimilarity.
@@ -233,27 +264,7 @@ In order to visualize the dissimilarity between the different samples, we can co
 mia provides some dimension reduction techniques, such as dbRDA. Additionally, we can use Bioconductor's scater package and the vegan package, made by @R_vegan to turn the dissimilarity into actual distances that can be visualized:
 
 ```{r}
-#| output: false
-# Load package to plot reducedDim
-library(scater)
-
-# Run PCoA on relabundance assay with Bray-Curtis distances
-tse <- runMDS(tse,
-              FUN = vegan::vegdist,
-              method = "bray",
-              assay.type = "relabundance",
-              name = "MDS_bray")
-```
-
-Now that we calculated the principal coordinates we can plot them onto a two dimensional space as such:
-
-```{r}
-#| output: false
-# Makes the plots interactive
-library(plotly)
-```
-
-```{r}
+#| label: showPCoA
 # Create ggplot object
 p <- plotReducedDim(tse, "MDS_bray") +
   geom_point(color = "#659b91")
@@ -265,6 +276,7 @@ ggplotly(p)
 However, the axes are not very informative and the amount of captured variance by the algorithm is nowhere to be found. We can tweak the plot to show some more information as such:
 
 ```{r}
+#| label: addVariancePCoA
 # Calculate explained variance
 e <- attr(reducedDim(tse, "MDS_bray"), "eig")
 rel_eig <- e / sum(e[e > 0])
@@ -277,20 +289,43 @@ p <- p + labs(x = paste("PCoA 1 (", round(100 * rel_eig[[1]], 1), "%", ")", sep 
 ggplotly(p)
 ```
 
-There we have it! Each axis shows the amount of variance or in our case dissimilarity retained by each principal coordinate. You can additionally add more options to color by a certain characteristic for example. More on this can be found in @sec-comparing-communities-by-beta-diversity-analysis.
+There we have it! Each axis shows the amount of variance or in our case dissimilarity retained by each principal coordinate. You can additionally add more options to color by a certain characteristic for example. More on this can be found in @sec-community-similarity.
 
 <hr>
 
-# Data visualization
+# Datavisualisation using heatmaps
 
-<h2>Acknowledgements</h2>
+Heatmaps are one of the most versatile ways to visualise your data. In this section we'll cover how to create a basic heatmap to visualise the most prevalent features using the [**sechm library**](https://bioconductor.org/packages/release/bioc/html/sechm.html). For a more detailed heatmap, please revert to **this section** [@sec-multi-assay-analyses] of the OMA book.
 
-This notebook has been carefully crafted by:
+Then, let's subset the TreeSE to the most prevalent taxa using an alternative experiment:
 
-![](images/profile-pics/axel.webp){.profilepic} **Axel Dagnaud**
+```{r}
+#| label: most-prevalent
+#altExp(tse, "prevalence-subset") <- subsetByPrevalent(tse,prevalence=0.5)[1:5,]
+```
 
-![](images/profile-pics/noah.png){.profilepic} **Noah de Gunst**
+When subsetting with this function, the resulting object no longer contains the correct relative abundances because these abundances were originally calculated based on the full dataset, not the subsetted one. Therefore, we need to recalculate the values to reflect the subset accurately. For the sake of readability, we'll also subset to the first five taxa after the initial subset.
 
--   **Leo Lahti**
+```{r}
+#| label: recalculate-relabundance
+altExp(tse, "prevalence-subset") <- transformAssay(altExp(tse,                                                "prevalence-subset"),
+                                       assay.type = "counts",
+                                       method = "relabundance")
+```
+
+Now that we have prepared the data, we can use the previously loaded sechm library to plot the heatmap:
+
+```{r}
+#| label: heatmap
+# Sets the colors
+setSechmOption("hmcols", value=c("#F0F0FF","#007562"))
+
+# Plots the actual heatmap.
+sechm(altExp(tse, "prevalence-subset"), features =
+      rownames(rowData(altExp(tse, "prevalence-subset"))),
+      assayName="relabundance",show_colnames=TRUE)
+```
+
+In the heatmap above, it is apparent that Parabacteroides are relatively common in some samples while Akkermansia is detected very seldom.
 
 </div>
