--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -336,7 +336,7 @@ references.
    in microbiome-based classification performance [@Giliberti2022,
    Karwowska2024].
 
- * 'standardize' Standardize transformation scales data to zero mean and 
+ * 'standardize' Standardize(or 'z-score') transformation scales data to zero mean and 
    unit variance. This is used to bring features (or samples) to more 
    comparable levels in terms of mean and scale of the values. This can enhance
    visualization and interpretation of the data
