--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -280,7 +280,8 @@ tse <- tse[, sorted_order]
 # Plot NeatMap with sechm
 sechm_neatmap <- sechm(tse, assayName = "standardized", features=rownames(tse), show_rownames = TRUE, 
                        show_colnames = TRUE, do.scale=FALSE, cluster_rows=FALSE, sortRowsOn = NULL,
-                       row_names_gp = gpar(fontsize = 4), column_names_gp = gpar(fontsize = 6))
+                       row_names_gp = gpar(fontsize = 4), column_names_gp = gpar(fontsize = 6), 
+                       breaks = 0.985)
 sechm_neatmap
 ```
 
