correlation between rarefied and non-rarefied

--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -317,9 +317,18 @@ tse <- runMDS(tse,
 		distfun=vegdist,  # Use vegdist beta diversity function
                 dmethod = "euclidean", # euclidean beta diversity
 		iterations = 10, 
-		transf=clr) 
+		transf=clr,
+		name = "MDS_aitchison_rarefied") 
 
-plotReducedDim(tse, "MDS")
+plotReducedDim(tse, "MDS_aitchison_rarefied")
+```
+
+```{r rarefaction_2}
+# Check correlation between non-rarefied and rarefied Aichitson distances
+all.equal(current = cor(as.vector(reducedDim(tse, "MDS_aitchison")),
+                        as.vector(reducedDim(tse, "MDS_aitchison_rarefied"))),
+          target = 1,
+          tolerance = 0.05)
 ```
 
 The mia package has the rarefaction function `rarefyAssay` that randomly
